# rustbot

./: .env  Cargo.toml
src/: main.rs
