[package]
name = "rustbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.3", features = ["tokio-comp", "tokio-native-tls-comp"] }
reqwest = "0.11.20"
serde = "1.0.188"
serde_json = "1.0.105"
serenity = {default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11.6"}
tokio = {version = "1.32.0", features = ["macros"]}
